[package]
name = "ruby-file-expand-path"
version = "0.1.0" # remember to set `html_root_url` in `src/lib.rs`.
authors = ["Ryan Lopopolo <rjl@hyperbo.la>"]
license = "MIT"
edition = "2018"
readme = "README.md"
repository = "https://github.com/artichoke/ruby-file-expand-path"
documentation = "https://docs.rs/ruby-file-expand-path"
homepage = "https://github.com/artichoke/ruby-file-expand-path"
description = "Path normalization routines ported from MRI Ruby 3.0.2"
keywords = ["normalize", "absolute", "canonicalize", "windows", "path"]
categories = ["os", "filesystem"]
include = ["src/**/*", "tests/**/*", "LICENSE", "README.md"]

[features]

[dependencies]
# `no_std` mode was fixed in https://github.com/BurntSushi/bstr/commit/83e8f27e
bstr = { version = "0.2.4", default-features = false }

[dev-dependencies]
# Check that crate versions are properly updated in documentation and code when
# bumping the version.
version-sync = "0.9, >= 0.9.2"

[package.metadata.docs.rs]
# This sets the default target to `x86_64-unknown-linux-gnu` and only builds
# that target. `boba` has the same API and code on all targets.
targets = ["x86_64-unknown-linux-gnu"]
