[package]
name = "ruby-file-expand-path"
version = "0.1.0" # remember to set `html_root_url` in `src/lib.rs`.
authors = ["Ryan Lopopolo <rjl@hyperbo.la>"]
license = "MIT"
edition = "2018"
readme = "README.md"
repository = "https://github.com/artichoke/ruby-file-expand-path"
documentation = "https://docs.rs/ruby-file-expand-path"
homepage = "https://github.com/artichoke/ruby-file-expand-path"
description = "Path normalization routines ported from MRI Ruby 3.0.2"
keywords = ["normalize", "absolute", "canonicalize", "windows", "path"]
categories = ["os", "filesystem"]
include = ["src/**/*", "tests/**/*", "LICENSE", "README.md"]

[features]

[dependencies]
# `no_std` mode was fixed in https://github.com/BurntSushi/bstr/commit/83e8f27e
bstr = { version = "0.2.4", default-features = false }

[dev-dependencies]

# Check that crate versions are properly updated in documentation and code when
# bumping the version.
[dev-dependencies.version-sync]
version = "0.9.3"
default-features = false
features = ["markdown_deps_updated", "html_root_url_updated"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
